Fix Chrome thinking 100vw += scrollbar width, which broke bg offset - fix pageContent to hide horiz scroll when sliding/transitioning pages

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ body {
 	right: 0;
 	bottom: 0;
 	width: 100vw;
+	max-width: 100%;
 	height: 100vh;
 	-webkit-transform: translate3d(0, 0, 0);
 	transform : translate3d(0, 0, 0);
@@ -170,6 +171,9 @@ header nav li a{
 
 .page-content{
 	position: relative;
+	overflow-x: hidden;
+	width: 100vw;
+	max-width: 100%;
 	-webkit-transform: translate3d(0, 0, 0);
 	transform : translate3d(0, 0, 0);
 }
